apps/prod/rbx-catalog/middleware-https.yml
# Traefik Middleware: HTTP -> HTTPS redirect
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: rbx-catalog
spec:
  redirectScheme:
    scheme: https
    permanent: true
