apps/prod/rbx-catalog/console-svc.yml
# Service: RBX Catalog Console
apiVersion: v1
kind: Service
metadata:
  name: rbx-catalog-console
  namespace: rbx-catalog
  labels:
    app.kubernetes.io/name: rbx-catalog-console
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: rbx-catalog
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rbx-catalog-console
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
