apps/prod/rbx-catalog/api-ingress.yml
# Ingress: RBX Catalog API
# https://api.catalog.rbx.ia.br
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbx-catalog-api-ingress
  namespace: rbx-catalog
  labels:
    app.kubernetes.io/name: rbx-catalog-api-ingress
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: rbx-catalog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: rbx-catalog-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.catalog.rbx.ia.br
        - api.catalog.rbxsystems.ch
      secretName: rbx-catalog-api-tls
  rules:
    - host: api.catalog.rbx.ia.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rbx-catalog-api
                port:
                  number: 8080
    - host: api.catalog.rbxsystems.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rbx-catalog-api
                port:
                  number: 8080
